src/app/controls-page/controls-page.component.scss
table.alignment-test {
  margin-left: 20px;
  margin-top: 20px;
  background: #171a21;

  tr,
  tr td {
    vertical-align: inherit;
  }

  tr th {
    vertical-align: bottom;
  }

  td {
    padding: 05px;
    border: 10px solid #34282c;
  }

  tr td:first-child {
    border: none;
  }

  td > * {
    border: 1px solid red;
  }
}

.flex-container {
  display: flex;
  gap: 12px;

  > * {
    flex: 0 1 20%;
  }
}

